# dragonmouth

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml
cli/: Cargo.toml
client/: Cargo.toml  build.rs
client/src/: error.rs  grpc.rs  kafka.rs  lib.rs  quic.rs  stream.rs  tcp.rs
filter/: Cargo.toml
filter/src/: config.rs  filter.rs  lib.rs  message.rs
filter/src/protobuf/: mod.rs
plugin-agave/: Cargo.toml  README.md  build.rs  config.json  server.crt  server.csr  server.key
plugin-agave/benches/encode/: account.rs  block_meta.rs  entry.rs  main.rs  slot.rs  transaction.rs
plugin-agave/fuzz/: Cargo.toml
plugin-agave/fuzz/fuzz_targets/: account.rs  blockmeta.rs  entry.rs  slot.rs  transaction.rs
plugin-agave/src/: channel.rs  config.rs  lib.rs  metrics.rs  plugin.rs
plugin-agave/src/protobuf/: message.rs  mod.rs
plugin-agave/src/protobuf/encoding/: account.rs  block_meta.rs  entry.rs  mod.rs  slot.rs  transaction.rs
proto/: Cargo.toml  build.rs
proto/proto/: richat.proto
proto/src/: lib.rs
richat/: Cargo.toml  build.rs  config.yml  config_backup_0210.yml
richat/src/: channel.rs  config.rs  lib.rs  log.rs  metrics.rs  version.rs
richat/src/grpc/: block_meta.rs  config.rs  mod.rs  server.rs
shared/: Cargo.toml  build.rs
shared/src/: config.rs  lib.rs  metrics.rs  shutdown.rs  version.rs
shared/src/transports/: grpc.rs  mod.rs  quic.rs  tcp.rs
