[workspace]
resolver = "2"
members = [
    "cli",
    "client",
    "filter",
    "plugin-agave",
    "proto",
    "richat",
    "shared",
]

[workspace.package]
authors = ["Lamports Dev", "Triton One"]
edition = "2021"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/richat"
license = "AGPL-3.0-only"
keywords = ["solana"]
publish = false

[workspace.dependencies]
affinity = "0.1.2"
agave-geyser-plugin-interface = "~2.1.1"
anyhow = "1.0.62"
arrayvec = "0.7.6"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.9.0"
cargo-lock = "10.0.1"
clap = "4.5.23"
const-hex = "1.14.0"
criterion = "0.5"
env_logger = "0.11.5"
futures = "0.3.31"
git-version = "0.3.9"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.17.9"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.22"
pin-project-lite = "0.2.15"
prometheus = "0.13.4"
prost = "0.13.4"
prost-types = "0.13.4"
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
quinn = "0.11.6"
rcgen = "0.13.1"
richat-client = { path = "client", version = "2.1.0" }
richat-filter = { path = "filter", version = "2.1.0" }
richat-plugin-agave = { path = "plugin-agave", version = "2.0.0" }
richat-proto = { path = "proto", version = "2.0.0" }
richat-shared = { path = "shared", version = "2.1.0" }
rustls = { version = "0.23.20", default-features = false }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = "1.0.145"
serde_json = "1.0.86"
serde_yaml = "0.9.33"
signal-hook = "0.3.17"
smallvec = "1.13.2"
solana-account-decoder = "~2.1.1"
solana-logger = "~2.1.1"
solana-nohash-hasher = "0.2.1"
solana-sdk = "~2.1.1"
solana-storage-proto = "~2.1.1"
solana-transaction-status = "~2.1.1"
spl-token-2022 = "6.0.0"
thiserror = "2.0.7"
tokio = "1.42.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vergen = "9.0.2"
webpki-roots = "0.26.7"
yellowstone-grpc-proto = "4.1.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
