[package]
name = "richat-cli"
version = "2.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Cli Tool"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const-hex = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
prost = { workspace = true }
richat-client = { workspace = true }
richat-plugin-agave = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }

[lints]
workspace = true
