[package]
name = "richat-proto"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Proto"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[dependencies]
prost = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[features]
default = []
yellowstone-grpc-plugin = ["yellowstone-grpc-proto/plugin"]

[lints]
workspace = true
