[package]
name = "richat-shared"
version = "2.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Shared code"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = true

[dependencies]
affinity = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
humantime-serde = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
prometheus = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
richat-proto = { workspace = true }
rustls = { workspace = true, features = ["std", "tls12", "ring"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, features = ["tls", "gzip", "zstd"] }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[lints]
workspace = true
