[package]
name = "richat-plugin-agave-fuzz"
version = "0.0.0"
authors = ["Lamports Dev"]
edition = "2021"
description = "Richat Agave Geyser Plugin Fuzz Tests"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[[bin]]
name = "account"
path = "fuzz_targets/account.rs"
test = true
doc = false
bench = false

[[bin]]
name = "blockmeta"
path = "fuzz_targets/blockmeta.rs"
test = true
doc = false
bench = false

[[bin]]
name = "entry"
path = "fuzz_targets/entry.rs"
test = true
doc = false
bench = false

[[bin]]
name = "slot"
path = "fuzz_targets/slot.rs"
test = true
doc = false
bench = false

[[bin]]
name = "transaction"
path = "fuzz_targets/transaction.rs"
test = true
doc = false
bench = false

[dependencies]
agave-geyser-plugin-interface = "~2.1.1"
arbitrary = { version = "1.4.1", features = ["derive"] }
const-hex = "1.14.0"
libfuzzer-sys = "0.4.8"
prost = "0.11.9"
richat-plugin-agave = { path = ".." }
solana-account-decoder = "~2.1.1"
solana-sdk = { version = "~2.1.1", features = ["dev-context-only-utils"] }
solana-storage-proto = "~2.1.1"
solana-transaction-status = "~2.1.1"
